# portkey

./: ADR.md  CLAUDE.md  COMPARISON.md  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  pyproject.toml
src/portkey/: __init__.py
src/portkey/application/: __init__.py  ports.py
src/portkey/domain/: __init__.py  errors.py  models.py
src/portkey/infrastructure/: __init__.py  cache.py
